[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx_tester"
version = "0.1.0"
description = "A Databricks notebook testing framework"
readme = "README.md"
authors = [{ name="Vignesh", email="vicky.manoharan2018@gmail.com" }]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "databricks-sdk",  # List all dependencies here
    "pytest"
]